<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/texto1"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/texto2"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/boton1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/textview" />
</LinearLayout>